# ds-playground

./: Coursera9.ipynb  Iris.ipynb  Titanic.ipynb  TitanicKNN.ipynb  TitanicSCM.ipynb  coursera12.ipynb  coursera13.ipynb  coursera2.ipynb  coursera3.ipynb  coursera5.ipynb  coursera8.ipynb  dogs_stepic.ipynb  house prices.ipynb  pyproject.toml  stepic_real_task.ipynb  titanic_linear.ipynb
.ipynb_checkpoints/: nlpNews-checkpoint.ipynb
