[tool.poetry]
name = "ds-playground"
version = "0.1.0"
description = ""
authors = ["Victoria"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.12"
matplotlib = "^3.5.2"
sklearn = "^0.0"
pymorphy2 = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
